add images for stores
